fix header alignment

--- a/app/assets/stylesheets/systems.scss
+++ b/app/assets/stylesheets/systems.scss
@@ -4,7 +4,8 @@
 
 /* INDEX */
 header {
-  h1 { float: left;}
+  float: left;
+  width: 100%;
 
   ul.button-bar {
     margin-top: 40px !important;
